--- a/PR/appsettings.json
+++ b/PR/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MyDatabase": "server =DESKTOP-SSCBH4Q\\SQLEXPRESS; database = Food;uid=sa;pwd=123456; TrustServerCertificate=true"
+    "MyDatabase": "server =LAPTOP-ALU23ESG; database = Food;uid=sa;pwd=55555; TrustServerCertificate=true"
   }
 }
